# docker_project

./: Dockerfile  auth.py  consumer.py  docker-compose.yaml  main.py  pyproject.toml  redis_utils.py
